--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,12 @@
 
         </activity>
 
+        <activity android:name=".BrownBearActivity"
+            android:label="@string/brown_bear_activity_label"
+            android:parentActivityName=".BearWithMe">
+
+        </activity>
+
     </application>
 
 </manifest>
